framework/contracts/account/manager/tests/snapshots/subaccount__account_move_ownership_to_sub_account-÷%$»Ì%÷w-sÃü8¦O0.sfD2cqM.snap
---
source: contracts/account/manager/tests/subaccount.rs
expression: chain.app.borrow().dump_wasm_raw(&contract_addr)
---
- - - 0
    - 7
    - 109
    - 111
    - 100
    - 117
    - 108
    - 101
    - 115
    - 97
    - 98
    - 115
    - 116
    - 114
    - 97
    - 99
    - 116
    - 58
    - 112
    - 114
    - 111
    - 120
    - 121
  - - 34
    - 78
    - 194
    - 176
    - 118
    - 194
    - 184
    - 194
    - 167
    - 195
    - 157
    - 92
    - 117
    - 48
    - 48
    - 49
    - 48
    - 69
    - 195
    - 148
    - 92
    - 117
    - 48
    - 48
    - 49
    - 66
    - 195
    - 183
    - 62
    - 105
    - 195
    - 164
    - 99
    - 47
    - 35
    - 195
    - 174
    - 194
    - 163
    - 194
    - 151
    - 194
    - 179
    - 124
    - 194
    - 178
    - 105
    - 195
    - 191
    - 67
    - 92
    - 117
    - 48
    - 48
    - 49
    - 51
    - 100
    - 91
    - 92
    - 34
    - 45
    - 120
    - 34
- - - 0
    - 123
    - 49
    - 50
    - 125
    - 105
    - 115
    - 95
    - 115
    - 117
    - 115
    - 112
    - 101
    - 110
    - 100
    - 101
    - 100
  - - 102
    - 97
    - 108
    - 115
    - 101
- - - 0
    - 123
    - 52
    - 125
    - 105
    - 110
    - 102
    - 111
  - - 123
    - 34
    - 110
    - 97
    - 109
    - 101
    - 34
    - 58
    - 34
    - 68
    - 101
    - 102
    - 97
    - 117
    - 108
    - 116
    - 32
    - 65
    - 98
    - 115
    - 116
    - 114
    - 97
    - 99
    - 116
    - 32
    - 65
    - 99
    - 99
    - 111
    - 117
    - 110
    - 116
    - 34
    - 44
    - 34
    - 103
    - 111
    - 118
    - 101
    - 114
    - 110
    - 97
    - 110
    - 99
    - 101
    - 95
    - 100
    - 101
    - 116
    - 97
    - 105
    - 108
    - 115
    - 34
    - 58
    - 123
    - 34
    - 83
    - 117
    - 98
    - 65
    - 99
    - 99
    - 111
    - 117
    - 110
    - 116
    - 34
    - 58
    - 123
    - 34
    - 109
    - 97
    - 110
    - 97
    - 103
    - 101
    - 114
    - 34
    - 58
    - 34
    - 92
    - 117
    - 48
    - 48
    - 49
    - 48
    - 195
    - 149
    - 38
    - 65
    - 63
    - 195
    - 134
    - 195
    - 135
    - 195
    - 176
    - 195
    - 166
    - 41
    - 195
    - 161
    - 195
    - 160
    - 112
    - 195
    - 164
    - 58
    - 194
    - 134
    - 94
    - 99
    - 195
    - 146
    - 195
    - 185
    - 104
    - 194
    - 149
    - 195
    - 154
    - 194
    - 177
    - 125
    - 194
    - 179
    - 194
    - 188
    - 194
    - 182
    - 195
    - 170
    - 64
    - 75
    - 92
    - 117
    - 48
    - 48
    - 48
    - 51
    - 34
    - 44
    - 34
    - 112
    - 114
    - 111
    - 120
    - 121
    - 34
    - 58
    - 34
    - 44
    - 32
    - 194
    - 131
    - 195
    - 185
    - 92
    - 117
    - 48
    - 48
    - 48
    - 48
    - 194
    - 190
    - 119
    - 194
    - 162
    - 194
    - 187
    - 123
    - 92
    - 110
    - 194
    - 128
    - 194
    - 191
    - 79
    - 194
    - 133
    - 194
    - 182
    - 119
    - 195
    - 132
    - 195
    - 188
    - 56
    - 99
    - 92
    - 117
    - 48
    - 48
    - 48
    - 51
    - 67
    - 195
    - 154
    - 194
    - 188
    - 92
    - 117
    - 48
    - 48
    - 48
    - 70
    - 194
    - 180
    - 75
    - 195
    - 170
    - 69
    - 92
    - 117
    - 48
    - 48
    - 49
    - 68
    - 194
    - 159
    - 34
    - 125
    - 125
    - 44
    - 34
    - 99
    - 104
    - 97
    - 105
    - 110
    - 95
    - 105
    - 100
    - 34
    - 58
    - 34
    - 99
    - 111
    - 115
    - 109
    - 111
    - 115
    - 45
    - 116
    - 101
    - 115
    - 116
    - 110
    - 101
    - 116
    - 45
    - 49
    - 52
    - 48
    - 48
    - 50
    - 34
    - 44
    - 34
    - 100
    - 101
    - 115
    - 99
    - 114
    - 105
    - 112
    - 116
    - 105
    - 111
    - 110
    - 34
    - 58
    - 110
    - 117
    - 108
    - 108
    - 44
    - 34
    - 108
    - 105
    - 110
    - 107
    - 34
    - 58
    - 110
    - 117
    - 108
    - 108
    - 125
- - - 0
    - 123
    - 54
    - 125
    - 99
    - 111
    - 110
    - 102
    - 105
    - 103
  - - 123
    - 34
    - 118
    - 101
    - 114
    - 115
    - 105
    - 111
    - 110
    - 95
    - 99
    - 111
    - 110
    - 116
    - 114
    - 111
    - 108
    - 95
    - 97
    - 100
    - 100
    - 114
    - 101
    - 115
    - 115
    - 34
    - 58
    - 34
    - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 49
    - 34
    - 44
    - 34
    - 109
    - 111
    - 100
    - 117
    - 108
    - 101
    - 95
    - 102
    - 97
    - 99
    - 116
    - 111
    - 114
    - 121
    - 95
    - 97
    - 100
    - 100
    - 114
    - 101
    - 115
    - 115
    - 34
    - 58
    - 34
    - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 50
    - 34
    - 125
- - - 97
    - 99
    - 99
    - 95
    - 105
    - 100
  - - 123
    - 34
    - 116
    - 114
    - 97
    - 99
    - 101
    - 34
    - 58
    - 34
    - 108
    - 111
    - 99
    - 97
    - 108
    - 34
    - 44
    - 34
    - 115
    - 101
    - 113
    - 34
    - 58
    - 51
    - 125
- - - 99
    - 111
    - 110
    - 116
    - 101
    - 120
    - 116
  - - 91
    - 93
- - - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 95
    - 105
    - 110
    - 102
    - 111
  - - 123
    - 34
    - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 34
    - 58
    - 34
    - 97
    - 98
    - 115
    - 116
    - 114
    - 97
    - 99
    - 116
    - 58
    - 109
    - 97
    - 110
    - 97
    - 103
    - 101
    - 114
    - 34
    - 44
    - 34
    - 118
    - 101
    - 114
    - 115
    - 105
    - 111
    - 110
    - 34
    - 58
    - 34
    - 48
    - 46
    - 49
    - 57
    - 46
    - 50
    - 34
    - 125
- - - 111
    - 119
    - 110
    - 101
    - 114
    - 115
    - 104
    - 105
    - 112
  - - 123
    - 34
    - 111
    - 119
    - 110
    - 101
    - 114
    - 34
    - 58
    - 34
    - 44
    - 32
    - 194
    - 131
    - 195
    - 185
    - 92
    - 117
    - 48
    - 48
    - 48
    - 48
    - 194
    - 190
    - 119
    - 194
    - 162
    - 194
    - 187
    - 123
    - 92
    - 110
    - 194
    - 128
    - 194
    - 191
    - 79
    - 194
    - 133
    - 194
    - 182
    - 119
    - 195
    - 132
    - 195
    - 188
    - 56
    - 99
    - 92
    - 117
    - 48
    - 48
    - 48
    - 51
    - 67
    - 195
    - 154
    - 194
    - 188
    - 92
    - 117
    - 48
    - 48
    - 48
    - 70
    - 194
    - 180
    - 75
    - 195
    - 170
    - 69
    - 92
    - 117
    - 48
    - 48
    - 49
    - 68
    - 194
    - 159
    - 34
    - 44
    - 34
    - 112
    - 101
    - 110
    - 100
    - 105
    - 110
    - 103
    - 95
    - 111
    - 119
    - 110
    - 101
    - 114
    - 34
    - 58
    - 110
    - 117
    - 108
    - 108
    - 44
    - 34
    - 112
    - 101
    - 110
    - 100
    - 105
    - 110
    - 103
    - 95
    - 101
    - 120
    - 112
    - 105
    - 114
    - 121
    - 34
    - 58
    - 110
    - 117
    - 108
    - 108
    - 125

