framework/contracts/account/manager/tests/snapshots/subaccount__creating_on_subaccount_should_succeed-contract0.snap
---
source: contracts/account/manager/tests/subaccount.rs
expression: chain.app.borrow().dump_wasm_raw(&contract_addr)
---
- - - 99
    - 111
    - 110
    - 102
    - 105
    - 103
  - - 123
    - 34
    - 110
    - 101
    - 120
    - 116
    - 95
    - 117
    - 110
    - 105
    - 113
    - 117
    - 101
    - 95
    - 112
    - 111
    - 111
    - 108
    - 95
    - 105
    - 100
    - 34
    - 58
    - 49
    - 125
- - - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 95
    - 105
    - 110
    - 102
    - 111
  - - 123
    - 34
    - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 34
    - 58
    - 34
    - 97
    - 98
    - 115
    - 116
    - 114
    - 97
    - 99
    - 116
    - 58
    - 97
    - 110
    - 115
    - 45
    - 104
    - 111
    - 115
    - 116
    - 34
    - 44
    - 34
    - 118
    - 101
    - 114
    - 115
    - 105
    - 111
    - 110
    - 34
    - 58
    - 34
    - 48
    - 46
    - 49
    - 57
    - 46
    - 50
    - 34
    - 125
- - - 111
    - 119
    - 110
    - 101
    - 114
    - 115
    - 104
    - 105
    - 112
  - - 123
    - 34
    - 111
    - 119
    - 110
    - 101
    - 114
    - 34
    - 58
    - 34
    - 111
    - 119
    - 110
    - 101
    - 114
    - 34
    - 44
    - 34
    - 112
    - 101
    - 110
    - 100
    - 105
    - 110
    - 103
    - 95
    - 111
    - 119
    - 110
    - 101
    - 114
    - 34
    - 58
    - 110
    - 117
    - 108
    - 108
    - 44
    - 34
    - 112
    - 101
    - 110
    - 100
    - 105
    - 110
    - 103
    - 95
    - 101
    - 120
    - 112
    - 105
    - 114
    - 121
    - 34
    - 58
    - 110
    - 117
    - 108
    - 108
    - 125
- - - 114
    - 101
    - 103
    - 105
    - 115
    - 116
    - 101
    - 114
    - 101
    - 100
    - 95
    - 100
    - 101
    - 120
    - 101
    - 115
  - - 91
    - 93

